--- a/PMS.UI/App.xaml
+++ b/PMS.UI/App.xaml
@@ -4,7 +4,15 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/ResourceDictionary.xaml"/>
+                <ResourceDictionary Source="/Resources/AppColorPalette.xaml"/>
+                <ResourceDictionary Source="/Resources/ComboBoxStyle.xaml"/>
+                <ResourceDictionary Source="/Resources/FirstRoundedBorderStyle.xaml"/>
+                <ResourceDictionary Source="/Resources/IconButtonStyle.xaml"/>
+                <ResourceDictionary Source="/Resources/ListBoxItemStyle.xaml"/>
+                <ResourceDictionary Source="/Resources/ListBoxStyle.xaml"/>
+                <ResourceDictionary Source="/Resources/SecondRoundedBorderStyle.xaml"/>
+                <ResourceDictionary Source="/Resources/TextBlockStyle.xaml"/>
+                <ResourceDictionary Source="/Resources/TextBoxStyle.xaml"/>
                 <ResourceDictionary Source="Resources/WatermarkStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
