--- a/PMS.UI/Resources/AppColorPalette.xaml
+++ b/PMS.UI/Resources/AppColorPalette.xaml
@@ -6,14 +6,16 @@
     <Color x:Key="PrimaryHoverColor">#2563EB</Color>
     <Color x:Key="TextColor">#1F2937</Color>
     <Color x:Key="FirstBackgroundColor">#F7F9FC</Color>
-    <Color x:Key="SecondBackgroundColor">#f6af3b</Color>
+    <Color x:Key="SecondColor">#f6af3b</Color>
+    <Color x:Key="SecondHoverColor">#dd9d35</Color>
     <Color x:Key="BorderColor">#D1D5DB</Color>
 
     <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource PrimaryColor}"/>
     <SolidColorBrush x:Key="PrimaryHoverBrush" Color="{StaticResource PrimaryHoverColor}"/>
     <SolidColorBrush x:Key="TextBrush" Color="{StaticResource TextColor}"/>
     <SolidColorBrush x:Key="FirstBackgroundBrush" Color="{StaticResource FirstBackgroundColor}"/>
-    <SolidColorBrush x:Key="SecondBackgroundBrush" Color="{StaticResource SecondBackgroundColor}"/>
+    <SolidColorBrush x:Key="SecondBrush" Color="{StaticResource SecondColor}"/>
+    <SolidColorBrush x:Key="SecondHoverBrush" Color="{StaticResource SecondHoverColor}"/>
     <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BorderColor}"/>
 
 </ResourceDictionary>
