--- a/PMS.UI/Resources/ThirdRoundedBorderStyle.xaml
+++ b/PMS.UI/Resources/ThirdRoundedBorderStyle.xaml
@@ -1,10 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="Border" x:Key="SecondRoundedBorderStyle">
+    <Style TargetType="Border" x:Key="ThirdRoundedBorderStyle">
         <Setter Property="CornerRadius" Value="6"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
-        <Setter Property="Background" Value="{StaticResource SecondBrush}"/>
+        <Setter Property="Background" Value="{StaticResource PrimaryBrush}"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="Padding" Value="6"/>
         <Setter Property="Effect">
