--- a/PMS.UI/Views/AddProjectDialog.xaml
+++ b/PMS.UI/Views/AddProjectDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PMS.UI.Views.AddProjectWindow"
+﻿<Window x:Class="PMS.UI.Views.AddProjectDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:PMS.UI.Views"
