--- a/PMS.UI/Views/PreviewTaskDialog.xaml
+++ b/PMS.UI/Views/PreviewTaskDialog.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="PMS.UI.Views.AddTaskDialog"
+﻿<Window x:Class="PMS.UI.Views.PreviewTaskDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:PMS.UI.Views"
         xmlns:vm="clr-namespace:PMS.UI.ViewModels"
-        Height="420" Width="350"
+        Height="300" Width="350"
         WindowStartupLocation="CenterOwner">
-    <views:AddTaskView/>
+    <views:PreviewTaskView/>
 </Window>
